--- a/THANKS
+++ b/THANKS
@@ -17,6 +17,7 @@ Eric Estievenart <eric@via.ecp.fr>
 H.J. Lu <hjl@gnu.org>
 Ian Lance Taylor <ian@cygnus.com>
 Joel Cannon <cannon@alpha.centenary.edu>
+Joel Klecker <espy@debian.org>
 Joel N. Weber II <devnull@gnu.org>
 Karl Berry <kb@cs.umb.edu>
 Kenneth Albanowski <kjahds@kjahds.com>
