--- a/TODO
+++ b/TODO
@@ -48,12 +48,8 @@ char'.  Find a workaround.
 In the future:
 **************
 
-* Fix libltdl, demo, mdemo and depdemo (in that order) on win32.
+* Fix mdemo and depdemo on win32.
 This may require resolving some of the items below.
-
-* Make the executable wrapper scripts work on win32.
-They will need to make sure all of the dll (particularly deplibs) paths are in
-$PATH, and probably cd into the .libs subdirectory.
 
 * Figure out how to use data items in dlls with win32.
 The difficult part is compiling each object which will be linked with an
