--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+1998-12-27  Thomas Tanner  <tanner@gmx.de>
+
+	* THANKS: added Erez Zadok <ezk@shekel.mcl.cs.columbia.edu>
+	
+1998-12-26  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>
+
+	* ltconfig.in: support i486-ncr-sysv4.3.03
+	shared libraries.
+
+	* ltmain.in: before every ln -s, remove the link name
+
 1998-12-25  Thomas Tanner  <tanner@gmx.de>
 
 	* depdemo/configure.in: removed last relics of demo
