*** empty log message ***

--- a/THANKS
+++ b/THANKS
@@ -14,6 +14,7 @@ Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Chris P. Ross <cross@eng.us.uu.net>
 Eric Estievenart <eric@via.ecp.fr>
+Erez Zadok <ezk@shekel.mcl.cs.columbia.edu>
 H.J. Lu <hjl@gnu.org>
 Ian Lance Taylor <ian@cygnus.com>
 Joel Cannon <cannon@alpha.centenary.edu>
