--- a/THANKS
+++ b/THANKS
@@ -28,6 +28,7 @@ Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
 Stephan Kulow <coolo@kde.org>
 Thomas Esser <te@informatik.uni-hannover.de>
+Todd Vierling <tv@pobox.com>
 Tom Tromey <tromey@cygnus.com>
 Ulrich Drepper <drepper@ipd.info.uni-karlsruhe.de>
 Volker Kuhlmann <kuhlmav@elec.canterbury.ac.nz>
