--- a/THANKS
+++ b/THANKS
@@ -20,6 +20,7 @@ Ian Lance Taylor <ian@cygnus.com>
 Joel Cannon <cannon@alpha.centenary.edu>
 Joel Klecker <espy@debian.org>
 Joel N. Weber II <devnull@gnu.org>
+Joseph Beckenbach III <jrb3@best.com>
 Karl Berry <kb@cs.umb.edu>
 Kenneth Albanowski <kjahds@kjahds.com>
 Marc J. Fraioli <fraioli@dg-rtp.dg.com>
