--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+1999-01-05  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in (cygwin, archive_cmds, archive_sym_cmds): Moved
+ 	ltdll.c into ltmain.in, to avoid its duplication, and added a sed
+ 	script to extract it.  Also, create def and base files in $objdir,
+ 	and don't remove them after the compilation.
+	(cygwin, library_names_spec): Create static part of the dll with
+ 	suffix -dll.a, to avoid conflicts with actual static libraries.
+	* ltmain.in: Added ltdll.c, as commented out text
+
 1999-01-01  Thomas Tanner  <tanner@gmx.de>
 
 	* NEWS: new BeOS support
